	  cob_accept_day_yyyyddd, cob_accept_time, cob_accept_microsecond_time):
	  use binary intermediate field instead of numeric edited, replacing
	  "expensive" sprintf calls and multiple de-editing/editing to max. one
	  minimal editing (via move.c)
	* common.c (cob_move_to_group_as_alnum): new function to handle MOVE to
	  group as MOVE to alphanumeric field, used in functions above
	* common.c (cob_display_arg_number, cob_accept_arg_number, cob_cmp):
	  minor refactoring to use COB_FIELD_INIT
	* common.c (check_current_date, cob_get_current_datetime),
	  coblocal.h (cob_settings->cob_time_constant_is_calculated):
	  skip expensive call to localtime + mktime if COB_CURRENT_DATE is
	  set and "complete", by doing it already for the constant

2023-01-02  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_is_numeric), move.c (cob_move, cob_move_fp_to_fp),
	  numeric.c: more additions for COB_TYPE_NUMERIC_L_DOUBLE, basic use now
	  works as expected
	* common.c (print_version): welcome 2023
	* common.c (check_current_date): only skip one - or / in COB_CURRENT_DATE
	* common.c (cob_sys_x91, set_config_val): integrated changes originally
	  done 2020-06-20 (!)
	* common.c, common.h: dropped ENV_RESETS and compare data pointer instead
	  of the name for all configurations that need additional setup
	* common.c (cob_sys_x91): activated function 35

2022-12-29  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c [!COB_EXPERIMENTAL]: disable "new" status 0P via preprocessor
	  to inspect later for either include as COB_LS_VALIDATE=PRINT or drop

2022-12-15  Simon Sobisch <simonsobisch@gnu.org>

	* common.c, common.h: new external field + define
	  COB_SPACES_ALPHABETIC / COB_SPACES_ALPHABETIC_BYTE_LENGTH
	* common.c: split sort_compare to variant with and without collation,
	  using direct memcmp for the later
	* common.c (compare_spaces, compare_character): new function used for
	  comparison of data without collation using memcmp in doubled areas